Adicionando informações e ajustes de estrutura

--- a/editaveis/abstract.tex
+++ b/editaveis/abstract.tex
@@ -1,10 +1,10 @@
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   This is the english abstract.
+   Abstract.
 
    \vspace{\onelineskip}
  
    \noindent 
-   \textbf{Key-words}: latex. abntex. text editoration.
+   \textbf{Key-words}:
  \end{otherlanguage*}
 \end{resumo}
