--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -1,21 +1,21 @@
 % Dados pessoais
-\autor{Nome do Autor}
-\curso{Nome do Curso}
+\autor{Matheus Herlan dos Santos Ferraz}
+\curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Título: Subtítulo do Trabalho}
-\data{2013}
+\titulo{Framework para Avaliação da Qualidade de Código}
+\data{2016}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
 
 % Dados da orientacao
-\orientador{(Titulação Acadêmica e Nome do Orientador)}
-\coorientador{(quando houver, Titulação Acadêmica e Nome do Orientador)}
+\orientador{Msc. Elaine Venson}
+\coorientador{À definir}
 
 % Dados para a ficha catalográfica
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{01 de junho de 2013}
-\membroConvidadoUm{Titulação e Nome do Professor Convidado 01}
-\membroConvidadoDois{Titulação e Nome do Professor Convidado 02}
+\dataDaAprovacao{À definir}
+\membroConvidadoUm{À definir}
+\membroConvidadoDois{À definir}
