--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -1,8 +1,15 @@
-\chapter*[Introdução]{Introdução}
-\addcontentsline{toc}{chapter}{Introdução}
+\chapter{Introdução}
 
-Este documento apresenta considerações gerais e preliminares relacionadas 
-à redação de relatórios de Projeto de Graduação da Faculdade UnB Gama 
-(FGA). São abordados os diferentes aspectos sobre a estrutura do trabalho, 
-uso de programas de auxilio a edição, tiragem de cópias, encadernação, etc.
+Este trabalho caracteriza-se como uma monografia submetida ao curso de graduação em Engenharia de Software da Universidade de Brasília, Campus Gama. O trabalho está organizado de forma a prover um bom entendimento ao leitor, apresentando inicialmente uma contextualização sobre o assunto tratado, os objetivos do trabalho, bem como um detalhamento acerca da problemática que está sendo trabalhada.
 
+\section{Contextualização}
+
+\section{Problema}
+
+\section{Objetivo}
+
+\subsection{Objetivo Geral}
+
+\subsection{Objetivos Específicos}
+
+\section{Justificativa}
