Adicionando problemática e objetivos

--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -1,15 +1,34 @@
 \chapter{Introdução}
 
-Este trabalho caracteriza-se como uma monografia submetida ao curso de graduação em Engenharia de Software da Universidade de Brasília, Campus Gama. O trabalho está organizado de forma a prover um bom entendimento ao leitor, apresentando inicialmente uma contextualização sobre o assunto tratado, os objetivos do trabalho, bem como um detalhamento acerca da problemática que está sendo trabalhada.
+Este trabalho caracteriza-se como uma monografia submetida ao curso de graduação em Engenharia de Software da Universidade de Brasília, Campus Gama. O trabalho está organizado de forma a prover um bom entendimento ao leitor, apresentando inicialmente uma contextualização sobre o assunto tratado, os objetivos do trabalho, bem como um detalhamento acerca da problemática identificada.
 
 \section{Contextualização}
 
 \section{Problema}
 
+O problema identificado é a falta de guias que reunem as principais práticas propostas pela Engenharia de Software no tocante à elaboração de testes de unitários, às inspeções de código e à manutenção, tanto evolutiva quanto corretiva, para a construção de produtos de software de maior qualidade.
+
+Adicionalmente, outro quesito do problema que deve ser ressaltado é que as concepções dos clientes de negócio não são concisamente levadas em conta no momento da execução de atividades mais técnicas como as citadas anteriormente. Para exemplificar esta afirmação, basta analisar o que ocorre durante a elaboração e execução de testes para o sistema que está sendo construído. Testes, muitas vezes não estão organizados para maximizar o valor de negócio e não alinhados com a missão do projeto \cite{vbse2}.
+
+Na busca de possíveis soluções para a problemática destacada, do ponto de vista técnico, já existem várias práticas propostas pela Engenharia de Software, tais como a elaboração de testes, inspeção de código etc. Nesse sentido, seria necessário reunir esse conjunto de boas práticas em um guia. Por outro lado, para lidar com a conciliação dos interesses de todos os envolvidos em um projeto de construção de software, tem-se as abordagens da VBSE - Engenharia de Software Baseada em Valor.
+
+A VBSE traz considerações de valor para o primeiro plano, de modo que as decisões em todos os níveis possam ser otimizadas, para atender ou conciliar os objetivos explícitos das partes interessadas, do marketing pessoal e analistas de negócio aos desenvolvedores, arquitetos e especialistas em qualidade \cite{vbse1}.
+
 \section{Objetivo}
 
 \subsection{Objetivo Geral}
 
+O objetivo geral deste trabalho é propor um conjunto de atividades, práticas e ferramentas que favoreçam a avaliação da qualidade de software, levando em consideração conceitos da VBSE.
+
 \subsection{Objetivos Específicos}
+
+Por objetivos específicos para este trabalho, tem-se:
+
+\begin{itemize}
+	\item Consolidar o entendimento acerca dos elementos necessários à construção do framework de avaliação da qualidade de software.
+	\item Trazer abordagens inerentes à inspeção, ao teste e à manutenção para a elaboração do framework.
+	\item Definir detalhes acerca da execução das atividades propostas pelo framework junto às atividades presentes no Scrum.
+	\item Incorporar diretrizes propostas pela Engenharia de Software Baseada em Valor ao framework.
+\end{itemize}
 
 \section{Justificativa}
