--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -8,58 +8,18 @@
 	isbn = {85-87090-90-9},
 }
 
-@inproceedings{soviero1997,
-	Author = {P. A. O. Soviero and L. G. M. Lavagna},
-	Title = {A Numerical Model for Thin Airfoils in Unsteady Motion},
-	Year = {1997},
-	Pages = {332-340},
-	Volume = {19},
-	Number = {3},
-	Booktitle = {Journal of the Brazilian Societyt Mechanical Sciences},	
+@book{vbse1,
+	author    = "Stefan Biffl and Aybüke Aurum and Barry Boehm and Hakan Erdogmus and Paul Grünbacher",
+    title     = "Value-Based Software Engineering",
+    year      = "2014",
+    publisher = "Springer"
 }
 
-@inproceedings{sparrow1980,
-	Author = {E. M. Sparrow},
-	Title = {Forced Convection Heat Transfer in a Duct Having Spanwise-Periodic
-	Rectangular Protuberances},
-	Year = {1980},
-	Pages = {149-167},
-	Volume = {3},
-	Booktitle = {Numerical Heat Transfer},
-}
-
-@article{clark1986,
-	Author = {J. A. Clark},
-	Title = {Private Communication},
-	Year = {1986},
-	Address = {University of Michigan},
-}
-
-@article{arruda2007,
-	Author = {M. B. B. Arruda},
-	Title = {Como fazer referências: bibliográficas, eletrônicas e demais
-	formas de documentos},
-	Year = {2007},
-	Url = {http://bu.ufsc.br/framerefer.html}
-}
-
-@article{coimbra1978,
-	Author = {A. L. Coimbra},
-	Title = {Lessons of Continuum Mechanics},
-	Year = {1978},
-	Address = {São Paulo, Brazil},
-	Pages = {428},
-	Editor = {Edgard Blücher},
-}
-
-@inproceedings{bordalo1989,
-	Author = {S. N. Bordalo and J. H. Ferziger and S. J. Kline},
-	Title = {The Development of Zonal Models for Turbulence},
-	Year = {1989},
-	Pages = {41-44},
-	Booktitle = {Proceedings of the 10th Brazilian Congress of Mechanical
-	Engineering}, 
-	Volume = {1},	
+@article{vbse2,
+	Author = "Rudolf Ramler and Stefan Biffl and Paul Grünbacher",
+	Title = {Value-Based Management of Software Testing},
+	Year = {2014},
+	Address = "Software Competence Center Hagenberg and Vienna University of Technology and Johannes Kepler University Linz"
 }
 
 @manual{NBR14724:2011,
