--- a/tcc.tex
+++ b/tcc.tex
@@ -13,7 +13,6 @@
 \imprimirfolhaderosto*
 
 \input{fixos/fichaCatalografica}
-\input{editaveis/errata}
 \input{fixos/folhaDeAprovacao}
 \input{editaveis/dedicatoria}
 \input{editaveis/agradecimentos}
@@ -28,7 +27,9 @@
 \textual
 
 \input{editaveis/introducao}
-\input{editaveis/desenvolvimento}
+\input{editaveis/referencialteorico}
+\input{editaveis/proposta}
+\input{editaveis/metodologia}
 \input{editaveis/consideracoesfinais}
 
 \bookmarksetup{startatroot} 
