Adicionando texto inicial do referencial teórico

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -11,3 +11,15 @@
 	Year = {2014},
 	Address = "Software Competence Center Hagenberg and Vienna University of Technology and Johannes Kepler University Linz"
 }
+
+@article{stubs1,
+	Author = "Biasi L. B.",
+	Title = {Geração automatizada de drivers e stubs de teste para JUnit a partir de especificações U2TP},
+	Year = {2006}
+}
+
+@article{nasa,
+	Author = "D. Ganesan and M. Lindvall and D. McComas and M. Bartholomew and S. Slegel and B. Medina and R. Krikhaar and C. Verhoef and L. P. Montgomery",
+	Title = {An analysis of unit tests of a flight software product line},
+	Year = {2013}
+}
