--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -3,7 +3,7 @@
 \curso{Engenharia de Software}
 
 % Dados do trabalho
-\titulo{Framework para Avaliação de Código: Uma Abordagem Baseada em Valor}
+\titulo{Framework para Avaliação da Qualidade de Código: Uma Abordagem Baseada em Valor}
 \data{2016}
 \palavraChaveUm{Palavra-chave01}
 \palavraChaveDois{Palavra-chave02}
