Adicionando mais aspectos ao referencial teórico e à metodologia

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -5,6 +5,13 @@
     publisher = "Springer"
 }
 
+@book{paulafilho,
+	author    = "Wilson de Pádua Paula Filho",
+    title     = "Engenharia de Software - Fundamentos, Métodos e Padrões",
+    year      = "2009",
+    publisher = "LTC"
+}
+
 @article{vbse2,
 	Author = "Rudolf Ramler and Stefan Biffl and Paul Grünbacher",
 	Title = {Value-Based Management of Software Testing},
@@ -12,8 +19,14 @@
 	Address = "Software Competence Center Hagenberg and Vienna University of Technology and Johannes Kepler University Linz"
 }
 
+@article{sistematica,
+	Author = "Kitchenham",
+	Title = {Guidelines for performing systematic literature reviews in software engineering},
+	Year = {2007}
+}
+
 @article{stubs1,
-	Author = "Biasi L. B.",
+	Author = "Luciano Bathaglini Biasi",
 	Title = {Geração automatizada de drivers e stubs de teste para JUnit a partir de especificações U2TP},
 	Year = {2006}
 }
@@ -22,4 +35,10 @@
 	Author = "D. Ganesan and M. Lindvall and D. McComas and M. Bartholomew and S. Slegel and B. Medina and R. Krikhaar and C. Verhoef and L. P. Montgomery",
 	Title = {An analysis of unit tests of a flight software product line},
 	Year = {2013}
+}
+
+@article{verificacao1,
+	Author = "H. Singh and H. S. Bawa",
+	Title = {Management of Effective Verification and Validation},
+	Year = {1995}
 }
