--- a/editaveis/abreviaturas.tex
+++ b/editaveis/abreviaturas.tex
@@ -1,3 +1,6 @@
 \begin{siglas}
-  \item VBSE Value-Based Software Engineering - Engenharia de Software Baseada em Valor
+  \item CMMI Capability Maturity Model Integration
+  \item IEEE Institute of Electrical and Eletronics Engineers
+  \item PMBOK Project Management Body of Knowledge
+  \item VBSE Value-Based Software Engineering
 \end{siglas}
