--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -48,7 +48,9 @@ Por objetivos específicos para este trabalho, tem-se:
 \begin{itemize}
 	\item \textbf{Capítulo 2 - Referencial Teórico}: apresenta conceitos e abordagens relacionados ao tema deste trabalho.
 
-	\item \textbf{Capítulo 3 - Proposta}: descreve a proposta de desenvolvimento de um framework para avaliação da qualidade de código.
+	\item \textbf{Capítulo 3 - Metodologia}: especifica a metodologia adotada para a pesquisa e desenvolvimento deste trabalho.
 
-	\item \textbf{Capítulo 4 - Metodologia}: especifica a metodologia adotada para a pesquisa e desenvolvimento deste trabalho.
+	\item \textbf{Capítulo 4 - Resultados}: apresenta os resultados obtidos a partir da execução da revisão sistemática de literatura.
+
+	\item \textbf{Capítulo 5 - Proposta}: descreve a proposta de desenvolvimento de um \textit{framework} para avaliação da qualidade de código com base nos resultados obtidos a partir da realização da revisão sistemática.
 \end{itemize}
