--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -1,1 +1,23 @@
 \chapter{Metodologia}
+
+É importante destacar que a revisão sistemática de literatura foi adotada como metodologia para a corrente pesquisa. A revisão sistemática se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas à uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
+
+A opção por essa metodologia deve-se ao fato de que este trabalho está voltado para a tentativa de compreender quais tem sido as abordagens empregadas na análise da qualidade de código a partir das óticas de testes unitários e inspeções de código. Porém, essas abordagens são analisadas em conjunto com as diretrizes propostas pela VBSE, de forma a conceber um \textit{framework} que reúna de forma concisa as mesmas.
+
+Outro aspecto interessante da revisão sistemática é que esta auxilia de maneira precisa na localização dos principais trabalhos publicados para uma determinada problemática, favorecendo a construção de uma linha cronológica que demonstra ao pesquisador quais linhas têm sido defendidas e quais são os campos mais promissores para uma futura exploração.
+
+Neste trabalho, para a execução da revisão sistemática, considerou-se a proposta de Kitchenham para a revisão no âmbito da Engenharia de \textit{Software}. A proposta é composta por três fases:
+
+\begin{itemize}
+	\item Planejamento da revisão
+	\item Condução da revisão
+	\item Relato da revisão
+\end{itemize}
+
+A fase de planejamento consiste na identificação da necessidade de se desenvolver uma revisão sistemática, bem como elaborar um protocolo de revisão. Logo em seguida, na fase de condução, os objetivos mais pontuais de pesquisa são identificados e, adicionalmente, estudos são selecionados e seus dados são extraídos e analisados. Por fim, na fase de relato, os dados extraídos e analisados na fase anterior são externalisados e elabora-se uma discussão.
+
+\section{Planejamento da Revisão}
+
+\section{Protocolo de Revisão}
+
+\section{Condução da Revisão}
