--- a/tcc.tex
+++ b/tcc.tex
@@ -21,15 +21,15 @@
 \input{editaveis/abstract}
 \input{fixos/listasAutomaticas}
 \input{editaveis/abreviaturas}
-\input{editaveis/simbolos}
 \input{fixos/indiceAutomatico}
 
 \textual
 
 \input{editaveis/introducao}
 \input{editaveis/referencialteorico}
-\input{editaveis/proposta}
 \input{editaveis/metodologia}
+\input{editaveis/resultados}
+\input{editaveis/proposta}
 \input{editaveis/consideracoesfinais}
 
 \bookmarksetup{startatroot} 
